<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_gradient"
    android:orientation="vertical">


    <Button
        android:id="@+id/friend_add_list_button_back"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_marginStart="153dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="38dp"
        android:background="@drawable/layout_rounded"
        android:text="@string/add_friend_button_go_back"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/friend_add_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/friend_add_list_search_button"
            android:layout_width="105dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/layout_rounded"
            android:text="@string/add_friend_button_search_user"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/friend_add_list_filter"
            android:layout_width="203dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:autofillHints="Search name"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/add_friend_button_search"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="415dp"
        android:layout_height="450dp"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friend_add_list_header">

        <ListView
            android:id="@+id/friend_add_list_view"
            android:layout_width="match_parent"
            android:layout_height="426dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp">

        </ListView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

