...
        android:id="@+id/friend_list_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/friend_list_search_button"
            android:layout_width="123dp"
            android:layout_height="36dp"
            android:layout_marginStart="132dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/layout_rounded"
            android:text="@string/friend_button_search"
...
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="75dp">

        </ListView>

        <Button
            android:id="@+id/back_from_friend_list_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="142dp"
...
