...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_gradient"
    tools:context=".ui.game.GameLobbyActivity">

    <TextView
        android:id="@+id/lobby_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/game_lobby_title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
...
