...
    <string name="newGameNumCoinsText">Number of coins</string>
    <string name="newGameDurationText">Duration of the game in minutes</string>
    <string name="newGameRadiusText">Radius of the game in meters</string>
    <string name="delete_button_text">Delete</string>

    <string name="add_friend_tag_0">userState</string>
    <string name="add_friend_tag_1">requestedUserId</string>
    <string name="add_friend_button_follow_text">Follow</string>
    <string name="add_friend_button_unfollow_text">Unfollow</string>
    <string name="add_friend_button_search">Search name</string>
    <string name="add_friend_button_search_user">Search user</string>
    <string name="add_friend_button_go_back">Go back to friend list</string>
    <string name="friend_button_search">Search friends</string>
...
